# novologiatgbot

./: .env.example  .gitignore  Dockerfile  README.md  bash.exe.stackdump  docker-compose.yml  dockerignore  pyproject.toml  test_env.py
src/: alembic.ini  db_test.py  main.py  pyproject.toml  redis_test.py  set_commands.py
src/alembic/: env.py
src/alembic/versions/: 9b97eb37e167_create_users_table_with_varchar_length.py
src/app/core/: __init__.py  base.py  bot_runner.py  config.py  env_config.py  session.py  settings.py  test_check_handlers.py
src/app/daos/: session.py  user.py
src/app/handlers/: __init__.py  courses.py  help.py  register.py  register_handlers.py  start.py
src/app/keyboards/: __init__.py  reply.py
src/app/logger/: logger_config.py
src/app/models/: data.py  user.py  validation.py
src/app/repositories/: user_repository.py
src/app/repositories/crud/: base.py
src/app/tests_check/: test_text_helper.py
