[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "Tanya",email = "taniushapushkina@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "aiogram (>=3.21.0,<4.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.mypy]
plugins = ["pydantic.mypy"]
exclude = "^\\.venv/"
strict = true
ignore_missing_imports = true

[tool.ruff]
exclude = [".venv"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN003",
    "COM812",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D202",
    "D203",
    "D213",
    "Q000",
    "Q003",
    "INP001",
    "S105",
    "S106",
    "RUF001",
    "RUF002",
    "PLC0415"
]

[tool.ruff.lint.isort]
case-sensitive = true
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
default-section = "third-party"
force-sort-within-sections = true
lines-after-imports = 2
relative-imports-order = "closest-to-furthest"

[tool.ruff.lint.mccabe]
max-complexity = 5
